# cache

./: .gitignore  CMakeLists.txt
cache/: CMakeLists.txt
cache/end-to-end-tests/: CMakeLists.txt
cache/end-to-end-tests/inputs/: LookupHits.test
cache/end-to-end-tests/lookup-hits/: LFULookupHitsTest.cpp
cache/include/cache/: Ideal.hpp  LFU.hpp
cache/unit-tests/: CMakeLists.txt
cache/unit-tests/lookup-hits/: LFULookupHitsTest.cpp
doctest/include/doctest/: doctest.h
stdin-ideal-test/: CMakeLists.txt
stdin-ideal-test/source/: Main.cpp
stdin-lfu-test/: CMakeLists.txt
stdin-lfu-test/source/: Main.cpp
